# wxWidgetsTest

./: CMakeLists.txt
examples/: wxImagePanel.cpp  wxImagePanel.hpp
examples/inc/: MyFrame.hpp
examples/src/: MyApp.cpp  MyFrame.cpp  wxImagePanel.cpp
src/: main.cpp
